--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
      <!-- end of phrase  -->
      <!-- start of team part -->
-     <!-- <div class="team">
+     <div class="team">
         <div class="container">
             <div class="heading">
                 <h1>Meet Our Team</h1>
@@ -168,22 +168,52 @@
                                 </div>
 
                             </div>
+                            <div class="card">
+                                <div class="image-content">
+                                    <span class="overlay"></span>
+
+                                    <div class="card-image">
+                                        <img src="person-image/images/profile1.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h2 class="name">David Dell</h2>
+                                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, mollitia consequatur. Porro delectus fugiat doloremque est nostrum eveniet possimus exercitationem, quos rerum eos reprehenderit sunt veritatis at corporis ducimus temporibus?</p>
+                                    <button class="button-card">View more</button>
+                                </div>
+
+                            </div>
+                            <div class="card">
+                                <div class="image-content">
+                                    <span class="overlay"></span>
+
+                                    <div class="card-image">
+                                        <img src="person-image/images/profile1.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h2 class="name">David Dell</h2>
+                                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, mollitia consequatur. Porro delectus fugiat doloremque est nostrum eveniet possimus exercitationem, quos rerum eos reprehenderit sunt veritatis at corporis ducimus temporibus?</p>
+                                    <button class="button-card">View more</button>
+                                </div>
+
+                            </div>
                         
                     </div>
                 </div>
             </div>
         </div>
-     </div> -->
+     </div>
 
 
 
 
      <!-- end of team part  -->
-     <h1>This is Our Team</h1>
+     <!-- <h1>This is Our Team</h1>
      <div class="container" style="height: 100vh;">
         <iframe src="slider.html" frameborder="0" style="height: 100%; width: 100%; overflow: hidden;"></iframe>
      </div>
-
+ -->
 
 
 
