--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                     <li><button class="comic-button">Log in</button></li>
                 </ul>
             </div>
+            
+            <ul class="hidden">
+                <li><a href="#contact">contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#events" class="item">Our Work</a></li>
+                <li><a href="#subscription">subscribe</a></li>
+                <li><a href="#question">Questions</a></li>
+                
+            </ul>
         </div>
     </div>
     <!-- end of header  -->
